# Classic-RBDOOM-3-BFG

./: .gitignore  .gitmodules  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOOMBFA.desktop  EXPINFO Documentation.txt  MOD2EXP.txt  New-Parameters.txt  PULL_REQUEST_TEMPLATE.md  RBDoom3BFG  README.md  README.txt  RELEASE-NOTES.txt  REVERBD Documentation.txt  _config.yml  alsoft.conf  alsoft.ini  generate_zBFA.bat  index.md  open-xr.plan  udmf_CRBD.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/tools/: download-ffmpeg.ps1  download-windows-sdk.ps1  openal-fix.patch  vcpkg.patch
.github/workflows/: auto_pr.yml  clear_caches.yml  cmake.yml  cmake_cache_linux_x64.yml  cmake_cache_windows_x64.yml  cmake_cache_windows_x86.yml  cmake_linux_x64.yml  cmake_mock.yml  cmake_windows_x64.yml  cmake_windows_x86.yml  package_formater.yml  prerelease.yml  upload_artifact.yml
base/: DoomBFA.sh  default.cfg  generate_zBFA_s1.cfg  generate_zBFA_s2.cfg
base/credits/: english.lang  english_a_RB.lang  english_b_BFA.lang
base/guis/: gameDOOM.gui
base/materials/: classic.mtr
base/renderprogs/: AmbientOcclusion_AO.ps.hlsl  _manifest.lua  ambient_lighting.ps.hlsl  bink.ps.hlsl  blendLight.ps.hlsl  fog.ps.hlsl  fog_skinned.ps.hlsl  global.inc.hlsl  hdr_glare_chromatic.ps.hlsl  interactionSM.ps.hlsl  skybox.ps.hlsl  (+5 more)
doc/: _config.yml  index.md
docs/: download.html  index.html  manual.html  table.css  table.js  theme.css  update.html  video.html
neo/: CMakeLists.txt  CMakePresets.json  PropertySheet.props  cmake-eclipse-linux-debug.sh  cmake-eclipse-linux-profile.sh  cmake-eclipse-linux-retail.sh  cmake-eclipse-mingw-retail.bat  cmake-linux-debug.sh  cmake-linux-release.sh  cmake-linux-retail.sh  cmake-vs2010.bat  cmake-vs2012-32bit-openal.bat  cmake-vs2012.bat  cmake-vs2013-32bit-openal.bat  cmake-vs2013.bat  cmake-vs2015-32bit-w10-xp-tools.bat  cmake-vs2015-32bit-xp-tools.bat  cmake-vs2015-64bit-w10-xp-tools.bat  cmake-vs2015-64bit-xp-tools.bat  cmake-vs2015-w10-xp-tools.bat  cmake-vs2015-windows10.bat  cmake-vs2015-xp-tools.bat  cmake-vs2015.bat  cmake-vs2017-32bit-w10-xp-tools.bat  cmake-vs2017-32bit-xp-tools.bat  cmake-vs2017-64bit-w10-xp-tools.bat  cmake-vs2017-64bit-xp-tools.bat  cmake-vs2017-w10-xp-tools-nonmonolithic.bat  cmake-vs2017-w10-xp-tools.bat  cmake-vs2017-windows10.bat  cmake-vs2017-xp-tools.bat  cmake-vs2017.bat  cmake-vs2019-uwp.bat  cmake-vs2019.bat  cmakepresets.json  linux-status  vcpkg.json  windows-32-bit-status  windows-status  xaudio29redist.txt
neo/d3xp/: AF.cpp  AFEntity.cpp  Achievements.cpp  Achievements.h  Actor.cpp  AimAssist.cpp  BrittleFracture.cpp  CMakeLists.txt  Camera.cpp  Classic.cpp  Classic.h  EndLevel.cpp  Entity.cpp  Entity.h  Fx.cpp  Game.h  GameEdit.cpp  Game_Internal.h  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  IK.cpp  Item.cpp  Item.h  Leaderboards.cpp  Light.cpp  Misc.cpp  Misc.h  Moveable.cpp  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  PlayerView.cpp  PlayerView.h  PredictedValue_impl.h  (+11 more)
neo/d3xp/ai/: AAS_debug.cpp  AAS_routing.cpp  AI.cpp  AI.h  AI_Vagary.cpp  AI_events.cpp  AI_pathing.cpp
neo/d3xp/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp  Anim_Testmodel.cpp
neo/d3xp/gamesys/: Class.cpp  Class.h  Event.cpp  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
neo/d3xp/menus/: MenuHandler.cpp  MenuHandler.h  MenuHandler_HUD.cpp  MenuHandler_PDA.cpp  MenuHandler_Scoreboard.cpp  MenuHandler_Shell.cpp  MenuScreen.cpp  MenuScreen.h  MenuScreen_HUD.cpp  MenuScreen_PDA_Inventory.cpp  MenuScreen_PDA_UserData.cpp  MenuScreen_PDA_UserEmails.cpp  MenuScreen_PDA_VideoDisks.cpp  MenuScreen_Scoreboard.cpp  MenuScreen_Shell_Adv_Controls.cpp  MenuScreen_Shell_AdvancedGraphics.cpp  MenuScreen_Shell_AdvancedOptions.cpp  MenuScreen_Shell_Bindings.cpp  MenuScreen_Shell_Browser.cpp  MenuScreen_Shell_ControllerLayout.cpp  MenuScreen_Shell_Controls.cpp  MenuScreen_Shell_Credits.cpp  MenuScreen_Shell_Dev.cpp  MenuScreen_Shell_Difficulty.cpp  MenuScreen_Shell_GameLobby.cpp  MenuScreen_Shell_GameOptions.cpp  MenuScreen_Shell_Gamepad.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Load.cpp  MenuScreen_Shell_MatchSettings.cpp  MenuScreen_Shell_ModeSelect.cpp  MenuScreen_Shell_NewGame.cpp  MenuScreen_Shell_PartyLobby.cpp  MenuScreen_Shell_Pause.cpp  MenuScreen_Shell_Playstation.cpp  MenuScreen_Shell_PressStart.cpp  MenuScreen_Shell_Resolution.cpp  MenuScreen_Shell_Root.cpp  MenuScreen_Shell_Save.cpp  MenuScreen_Shell_Settings.cpp  (+17 more)
neo/d3xp/physics/: Clip.cpp  Force_Constant.cpp  Force_Drag.cpp  Force_Field.cpp  Force_Field.h  Force_Grab.cpp  Force_Spring.cpp  Physics_AF.cpp  Physics_AF.h  Physics_Actor.cpp  Physics_Base.cpp  Physics_Monster.cpp  Physics_Parametric.cpp  Physics_Player.cpp  Physics_RigidBody.cpp  Physics_Static.cpp  Physics_StaticMulti.cpp  Push.cpp
neo/d3xp/script/: Script_Compiler.cpp  Script_Interpreter.cpp  Script_Program.cpp  Script_Thread.cpp
neo/idlib/: BitMsg.h  CMakeLists.txt  CmdArgs.cpp  CmdArgs.h  DataQueue.h  Heap.cpp  Heap.h  LangDict.cpp  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  ParallelJobList.cpp  Parser.cpp  Str.cpp  Str.h  StrStatic.h  Swap.h  precompiled.h
neo/idlib/containers/: HashTable.h  List.h  Queue.h  StaticList.h  StrPool.h  VectorSet.h
neo/idlib/geometry/: DrawVert.cpp  DrawVert.h  Surface_Patch.cpp  Surface_SweptSpline.cpp  TraceModel.cpp
neo/idlib/math/: Angles.cpp  Angles.h  Complex.h  Curve.h  Extrapolate.h  Interpolate.h  Lcp.cpp  MatX.cpp  MatX.h  Matrix.cpp  Polynomial.cpp  Quat.h  Random.h  Simd_Generic.cpp  Vector.h
neo/idlib/sys/: sys_alloc_tags.h  sys_defines.h  sys_filesystem.h  sys_includes.h  sys_intrinsics.h  sys_threading.h  sys_types.h
neo/idlib/sys/posix/: posix_thread.cpp
neo/idlib/sys/win32/: win_thread.cpp
neo/libs/platform/: CMakeLists.txt  COPYING.txt  INSTALLING.txt  OpenApplication.h  OpenDLC.h  OpenPlatform.cpp  OpenPlatform.h  OpenPlatformLocal.h  Platform.def  README.md  README.txt
oculus/: autoexec.cfg  oculus_default.cfg  oculus_defaultDK2.cfg
(+559 files in other folders)
